Crash recovery support (#22)
